# customer_lixil_sf_lead_enrichment

./: .example-env  .gitignore  README.md  pyproject.toml
src/sf_lead_enrichment_automation/: crew.py  main.py
src/sf_lead_enrichment_automation/config/: agents.yaml  tasks.yaml
tests/: json_to_base64.py
