[project]
name = "sf_lead_enrichment_automation"
version = "0.1.0"
description = "sf_lead_enrichment_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=0.186.1",
    "crewai-tools>=0.71.0",
    "ipykernel>=6.30.1",
    "google-cloud-aiplatform>=1.38.0",
    "google-auth>=2.23.0",
]

[project.scripts]
sf_lead_enrichment_automation = "sf_lead_enrichment_automation.main:run"
run_crew = "sf_lead_enrichment_automation.main:run"
train = "sf_lead_enrichment_automation.main:train"
replay = "sf_lead_enrichment_automation.main:replay"
test = "sf_lead_enrichment_automation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
